--- a/index.html
+++ b/index.html
@@ -1,32 +1,177 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=9" />
-    <title>SudoByte Solutions - Software Development company out of Cheyenne, WY</title>
-    <meta name="description" content="Software Development Company out of Cheyenne, Wyoming bring software solutions world wide.
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=9" />
+  <title>SudoByte Solutions - Software Development company out of Cheyenne, WY</title>
+  <meta name="description" content="Software Development Company out of Cheyenne, Wyoming bring software solutions world wide.
     creating beautiful layouts, software designs, and branding, fulfilling every need our clients have.">
-    <meta name="keywords" content="software development, web development, sudobye, sudobye solutions, graphic design, software development company, website, website developers, system software">
-    <meta name="SudoByte Solutions" content="SudoByte Solutions">
-    <meta property="og:description" content="Software Development Company out of Cheyenne, Wyoming bring software solutions world wide.
+  <meta name="keywords" content="software development, web development, sudobye, sudobye solutions, graphic design, software development company, website, website developers, system software">
+  <meta name="SudoByte Solutions" content="SudoByte Solutions">
+  <meta property="og:description" content="Software Development Company out of Cheyenne, Wyoming bring software solutions world wide.
     creating beautiful layouts, software designs, and branding, fulfilling every need our clients have.">
-    <meta property="og:url" content="https://sudobyte.com/">
-    <meta property="og:site_name" content="SudoByte Solutions">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
+  <meta property="og:url" content="https://sudobyte.com/">
+  <meta property="og:site_name" content="SudoByte Solutions">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+
+  <!-- ########## HEADER SECTION WITH PHONE NUMBER ########## -->
+  <section id="header">
+    <header>
+      <div class="fixed-top container-fluid bg-dark">
+        <div class="row">
+          <div class="col-md-12">
+            <p>333.333.3333</p>
+          </div>
+        </div>
+      </div>
+    </header>
+  </section>
+
+  <!-- ########## END OF HEADER SECTION ########## -->
+
+  <!-- ########## NAVBAR SECTION ########## -->
+  <section id="navbar">
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link px-4" href="#service">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-4" href="#who_are_we_section">Who We Are</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-4" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </section>
+
+  <!-- ########## END OF NAVBAR SECTION ########## -->
+
+  <!-- ########## JUMBOTRON SECTION WITH SERVICES SECTION ########## -->
+
+  <section id="jumbotron">
+    <div class="jumbotron text-center">
+      <img id="branding_img" src="images/branding_img.png" alt="">
+
+      <!-- ########## SERVICES SECTION ########## -->
+
+      <div id="service" class="container">
+        <div class="row">
+          <div class="col-sm services_box mx-auto">
+            <div class="row mx-auto">
+              <div class="service_individuals col-md-4 mx-auto">
+                <img class="services_icons" src="images/helmet-safety-solid.png" alt="">
+                <h1>Service 1</h1>
+                <p class="text-left">This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be
+                  text about what specifically this service does.</p>
+              </div>
+              <div class="service_individuals col-md-4 mx-auto">
+                <img class="services_icons" src="images/person-digging-solid.png" alt="">
+                <h1>Service 2</h1>
+                <p class="text-left">This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be
+                  text about what specifically this service does.</p>
+              </div>
+              <div class="service_individuals col-md-4 mx-autos">
+                <img class="services_icons" src="images/toilet-portable-solid.png" alt="">
+                <h1>Service 3</h1>
+                <p class="text-left">This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be
+                  text about what specifically this service does.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- ########## END OF SERVICES SECTION ########## -->
+    </div>
+
+  </section>
+  <!-- ########## END OF JUMBOTRON SECTION ########## -->
+
+  <!-- ########## WHO ARE WE SECTION ########## -->
+
+  <section id="who_are_we_section">
+    <div class="mid_jumbtron">
+      <div class="container-fluid justify-content-start">
+        <div class="row">
+          <div class="col-sm">
+            <div class="row">
+              <div class="who_are_we_box col-xs-12 col-sm-12 col-md-4">
+                <h1>Who We Are</h1>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in
+                  Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections
+                  1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum,
+                  "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
+
+                  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form,
+                  accompanied by English versions from the 1914 translation by H. Rackham.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <section id="contact">
+  <div class="container">
+    <div class="row  d-flex justify-content-center">
+      <h1>CONTACT</h1>
+    </div>
+    <div class="row ">
+      <div class="col-sm align-center contact_circles_container">
+        <div class="col d-flex justify-content-center">
+          <div class="contact_circles">
+            <img src="images/phone-solid.svg" alt="">
+          </div>
+        </div>
+        <h3>333.333.3333</h3>
+      </div>
+      <div class="col-sm mx-auto contact_circles_container">
+        <div class="col  d-flex justify-content-center">
+          <div class="contact_circles">
+            <img src="images/envelope-solid.svg" alt="">
+          </div>
+        </div>
+        <h3>myemail@myemail.com</h3>
+      </div>
+    </div>
+  </div>
+  </section>
+  <section id="footer">
+    <div class="container-fluid bg-dark">
+      <div class="d-flex justify-content-start">
+        <h3>Miller Industrial Services</h3>
+      </div>
+        <div class="d-flex justify-content-end">
+          <p>©2022 Miller Industrial Services. All rights reserved. By <a href="https://www.sudobyte.com/">SudoByte Solutions</a></p>
+        </div>
+    </div>
+  </section>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="js/main.js"type="text/javascript"></script>
-  </body>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="js/main.js" type="text/javascript"></script>
+</body>
+
 </html>
