--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <!-- ########## NAVBAR SECTION ########## -->
   <section id="navbar">
     <nav class="navbar navbar-expand-lg fixed-top">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa-solid fa-bars"></i>
+      <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <img src="images/bars-solid.svg" alt="">
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mx-auto">
@@ -66,43 +66,48 @@
   <!-- ########## JUMBOTRON SECTION WITH SERVICES SECTION ########## -->
 
   <section id="jumbotron">
-    <div class="jumbotron text-center">
+    <div class="jumbotron text-center container-fluid">
+      <div class="row d-flex justify-content-center">
       <img id="branding_img" src="images/branding_img.png" alt="">
-
-      <!-- ########## SERVICES SECTION ########## -->
-
-      <div id="service" class="container">
-        <div class="row">
-          <div class="col-sm services_box mx-auto">
-            <div class="row mx-auto">
-              <div class="service_individuals col-md-4 mx-auto">
-                <img class="services_icons" src="images/helmet-safety-solid.png" alt="">
-                <h1>Service 1</h1>
-                <p class="text-left">This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be
-                  text about what specifically this service does.</p>
-              </div>
-              <div class="service_individuals col-md-4 mx-auto">
-                <img class="services_icons" src="images/person-digging-solid.png" alt="">
-                <h1>Service 2</h1>
-                <p class="text-left">This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be
-                  text about what specifically this service does.</p>
-              </div>
-              <div class="service_individuals col-md-4 mx-autos">
-                <img class="services_icons" src="images/toilet-portable-solid.png" alt="">
-                <h1>Service 3</h1>
-                <p class="text-left">This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be
-                  text about what specifically this service does.</p>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
 
-      <!-- ########## END OF SERVICES SECTION ########## -->
+
+
     </div>
 
   </section>
   <!-- ########## END OF JUMBOTRON SECTION ########## -->
+
+  <!-- ########## SERVICES SECTION ########## -->
+
+  <div id="service" class="container">
+    <div class="row">
+      <div class="col-sm services_box text-center">
+        <div class="row mx-auto">
+          <div class="service_individuals col-md-4">
+            <img class="services_icons" src="images/helmet-safety-solid.png" alt="">
+            <h1>Service 1</h1>
+            <p class="text-left">This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be
+              text about what specifically this service does.</p>
+          </div>
+          <div class="service_individuals col-md-4 mx-auto">
+            <img class="services_icons" src="images/person-digging-solid.png" alt="">
+            <h1>Service 2</h1>
+            <p class="text-left">This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be
+              text about what specifically this service does.</p>
+          </div>
+          <div class="service_individuals col-md-4 mx-autos">
+            <img class="services_icons" src="images/toilet-portable-solid.png" alt="">
+            <h1>Service 3</h1>
+            <p class="text-left">This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be text about what specifically this service does.This here will be
+              text about what specifically this service does.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ########## END OF SERVICES SECTION ########## -->
 
   <!-- ########## WHO ARE WE SECTION ########## -->
 
